--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,12 +1,12 @@
 @font-face {
-    font-family: "Nanum Gothic";
-    src: url("Nanum_Gothic/NanumGothic-Regular.ttf");
+    font-family: "Delius";
+    src: url("Delius/Delius-Regular.ttf");
 }
 
 body {
     background-color: white;
     padding: 0;
-    font-family: 'Nanum Gothic', Arial, Helvetica, sans-serif;
+    font-family: 'Delius', Arial, Helvetica, sans-serif;
 }
 
 .navbar {
