--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -7,6 +7,7 @@ body {
     background-color: white;
     padding: 0;
     font-family: 'Delius', Arial, Helvetica, sans-serif;
+    width: 100%;
 }
 
 .navbar {
@@ -82,7 +83,7 @@ footer .none {
 }
 
 .homeSecond img {
-    width: 400px;
+   width: 80%;
 }
 
 .title {
@@ -147,6 +148,7 @@ footer .none {
     width: 33%;
     list-style: inside;
     border-right: 2px solid #578922;
+    padding: 0 15px 0 15px;
     margin-bottom: 200px;
 }
 
@@ -372,9 +374,12 @@ footer .none {
     align-items: center;
 }
 
+.homeSecond .desktop-off {
+    display: none;
+}
 
 /* Tel + tablette : */
-@media (max-width: 980px) {
+@media (max-width: 1024px) {
 
 footer {
     flex-direction: column;
@@ -385,6 +390,98 @@ footer div {
     border-right: 0;
     text-align: center;
     padding: 15px 0 15px 0;
+}
+
+.homeFirst .title {
+    max-width: 80%;
+}
+
+.homeFirst h1 {
+    font-size: 1.5rem;
+}
+
+.homeSecond {
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 0;
+}
+
+.homeSecond div {
+    width: 80%;
+    flex-direction: row;
+    text-align: center;
+    justify-content: center;
+    border-right: 0;
+    padding: 0;
+    margin-bottom: 100px;
+}
+
+.homeSecond img {
+    max-width: 50%;
+}
+
+.homeSecond .mobile-off {
+    display: none;
+}
+
+.homeSecond .desktop-off {
+    display: inline;
+}
+
+.homeThird {
+    flex-direction: column;
+    margin-bottom: 100px;
+}
+
+.homeThird div, .homeThird .none {
+    width: 80%;
+    border-bottom: 2px solid #578922;
+    border-right: 0;
+    margin-bottom: 0;
+    padding-bottom: 25px;
+}
+
+.imgAssociation img {
+    width: 80%;
+}
+
+.team {
+    flex-direction: column;
+    align-items: center;
+}
+
+.association .team div, .association .team .none {
+    width: 90%;
+    border-bottom: 2px solid #578922;
+    border-right: 0;
+    margin-top: 0;
+}
+
+.actualities img {
+    max-width: 80%;
+}
+
+.joinUs {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.joinUs .block {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.joinUs .block div {
+    width: 90%;
+    border-bottom: 2px solid #578922;
+    border-right: 0;
+}
+
+.joinUs .first {
+    border-bottom: 2px solid #578922;
+    width: 90%;
 }
 
 }
