--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -450,11 +450,15 @@ footer div {
     align-items: center;
 }
 
+.association div, .association blockquote, .actualities .div {
+    width: 90%;
+}
+
 .association .team div, .association .team .none {
     width: 90%;
     border-bottom: 2px solid #578922;
     border-right: 0;
-    margin-top: 0;
+    margin: 0;
 }
 
 .actualities img {
@@ -468,6 +472,7 @@ footer div {
 }
 
 .joinUs .block {
+    width: 90%;
     flex-direction: column;
     align-items: center;
     text-align: center;
